--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "url": "git://github.com/dperini/nwsapi.git"
   },
   "scripts": {
-    "lint": "eslint ./src/nwsapi.js"
+    "lint": "eslint ./src/nwsapi.js",
+    "test": "node test/unit"
   },
   "devDependencies": {
     "eslint": "^4.19.1"
